--- a/mirrorfashion/css/styles.css
+++ b/mirrorfashion/css/styles.css
@@ -316,5 +316,54 @@ footer .container {
 }
 
 
+@media (max-width: 939px) {
+    @media (min-width: 480px) {
+        header h1 {
+            margin: 5px 0;
+        }
+
+        .menu-departamentos {
+            padding-bottom: 10px;
+            
+        }
+
+        .menu-departamentos nav > ul {
+            column-count: 2;
+        }
+    }
+
+    @media (min-width: 720px) {
+        header h1 {
+            text-align: left;
+        }
+
+        .menu-opcoes {
+            position: absolute;
+        }
+
+        .sacola {
+            display: block;
+        }
+
+        .painel li {
+            width: 15%;
+        }
+
+        .busca,
+        .menu-departamentos {
+            margin-right: 1%;
+            width: 30%;
+        }
+
+        .menu-departamentos nav > ul {
+            column-count: 1;
+        }
+
+        .banner-destaque img {
+            width: 69%;
+        }
+    }
+}
+
 /* Parei em  CSS3 Transitions
  * Página 133. */
