--- a/mirrorfashion/css/styles.css
+++ b/mirrorfashion/css/styles.css
@@ -132,7 +132,29 @@ header {
 
 .destaque {
     margin-top: 10px;
+    position: relative;
 }
+
+.pause,
+.play {
+    display: block;
+    position: absolute;
+    right: 15px;
+    top: 15px;
+}
+
+.pause	{
+    border-left: 10px solid #900;
+    border-right: 10px solid #900;
+    height: 30px;
+    width: 5px;
+}
+.play	{
+    border-left: 25px solid	#900;
+    border-bottom: 15px solid transparent;
+    border-top: 15px solid transparent;
+}
+
 
 .menu-departamentos {
     margin-top: 10px;
